added github link

--- a/public/index.html
+++ b/public/index.html
@@ -160,8 +160,16 @@
               </div>
               <div class="data">
                 <p class="semi-bold">Linkedin</p>
-                <a style="text-decoration:none;"
-                  href="https://www.linkedin.com/in/rytis-razmus-048a46163">Razmus@linkedin.com</a>
+                <a href="https://www.linkedin.com/in/rytis-razmus-048a46163">Razmus@linkedin.com</a>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="data">
+                <p class="semi-bold">GitHub</p>
+                <a href="https://github.com/RytisRazmus">GitHub</a>
               </div>
             </li>
           </ul>
