--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
         </div>
         <p>I'm a Junior Front End Developer currently working at LigoWave Technology. I'm also at my last semester at Vilnius
           University of Applied Sciences and will get my diploma on January, 2022.
-          <br>I have 1 year of experience working as a Front End Developer and the framework which I worked with is Vue.js.
+          <br>I have 1 year of experience working as a Front End Developer and the framework which I work with is Vue.js.
         </p>
       </div>
       <div class="resume_item resume_work">
@@ -197,7 +197,7 @@
               <p class="semi-bold">LigoWave Technology</p>
               <p>Junior Front end Developer</p>
             </div>
-            <p class="about">At LigoWave I work with Vue.js and I make GUI's for various routers.</p>
+            <p class="about">At LigoWave I work with Vue.js and I make GUIs for various routers.</p>
             <p class="about">Technologies I have experience working with:</p>
             <div class="experience">
               <span class="item">
