--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Rytis Razmus</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="assets/favicon-32x32.png">
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
     integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg=="
@@ -59,30 +60,21 @@
           <ul>
             <li>
               <div class="skill_name">
+                SCSS
+              </div>
+              <div class="skill_progress">
+                <span style="width: 95%;"></span>
+              </div>
+              <div class="skill_per">95%</div>
+            </li>
+            <li>
+              <div class="skill_name">
                 HTML
               </div>
               <div class="skill_progress">
                 <span style="width: 90%;"></span>
               </div>
               <div class="skill_per">90%</div>
-            </li>
-            <li>
-              <div class="skill_name">
-                CSS
-              </div>
-              <div class="skill_progress">
-                <span style="width: 90%;"></span>
-              </div>
-              <div class="skill_per">90%</div>
-            </li>
-            <li>
-              <div class="skill_name">
-                SCSS
-              </div>
-              <div class="skill_progress">
-                <span style="width: 85%;"></span>
-              </div>
-              <div class="skill_per">85%</div>
             </li>
             <li>
               <div class="skill_name">
@@ -98,9 +90,9 @@
                 TS
               </div>
               <div class="skill_progress">
-                <span style="width: 55%;"></span>
+                <span style="width: 85%;"></span>
               </div>
-              <div class="skill_per">55%</div>
+              <div class="skill_per">85%</div>
             </li>
             <li>
               <div class="skill_name">
@@ -113,12 +105,21 @@
             </li>
             <li>
               <div class="skill_name">
-                MYSQL
+                Git
               </div>
               <div class="skill_progress">
-                <span style="width: 60%;"></span>
+                <span style="width: 85%;"></span>
               </div>
-              <div class="skill_per">60%</div>
+              <div class="skill_per">85%</div>
+            </li>
+            <li>
+              <div class="skill_name">
+                React
+              </div>
+              <div class="skill_progress">
+                <span style="width: 65%;"></span>
+              </div>
+              <div class="skill_per">65%</div>
             </li>
             <li>
               <div class="skill_name">
@@ -140,12 +141,12 @@
             </li>
             <li>
               <div class="skill_name">
-                GitLab
+                MYSQL
               </div>
               <div class="skill_progress">
-                <span style="width: 75%;"></span>
+                <span style="width: 60%;"></span>
               </div>
-              <div class="skill_per">75%</div>
+              <div class="skill_per">60%</div>
             </li>
           </ul>
         </div>
@@ -160,7 +161,7 @@
               </div>
               <div class="data">
                 <p class="semi-bold">Linkedin</p>
-                <a href="https://www.linkedin.com/in/rytis-razmus-048a46163">Razmus@linkedin.com</a>
+                <a target="_blank" href="https://www.linkedin.com/in/rytis-razmus-048a46163">Razmus@linkedin.com</a>
               </div>
             </li>
             <li>
@@ -169,7 +170,7 @@
               </div>
               <div class="data">
                 <p class="semi-bold">GitHub</p>
-                <a href="https://github.com/RytisRazmus">GitHub</a>
+                <a target="_blank" href="https://github.com/RytisRazmus">GitHub</a>
               </div>
             </li>
           </ul>
@@ -181,24 +182,23 @@
         <div class="title">
           <p class="bold">About me</p>
         </div>
-        <p>I'm a Junior Front End Developer currently working at LigoWave Technology. I'm also at my last semester at Vilnius
-          University of Applied Sciences and will get my diploma on January, 2022.
-          <br>I have 1 year of experience working as a Front End Developer and the framework which I work with is Vue.js.
+        <p>I'm a Junior Front End Developer who also has experience working with Node.js and Spring for the backend. 
+          My favourite Front End Framework is Vue.js and I worked with it at LigoWave Technology. I also worked with React, Typescript and Spring at EIS Group.<br>
+          P.S. This resume is made with HTML and CSS, you can see the code on my <a target="_blank" href="https://github.com/RytisRazmus">GitHub</a>.
         </p>
       </div>
       <div class="resume_item resume_work">
         <div class="title">
           <p class="bold">Work Experience</p>
         </div>
-        <ul>
+        <ul class="">
           <li>
-            <div class="date">2020 - present</div>
+            <div class="date">2020.10 - 2021.11</div>
             <div class="info">
               <p class="semi-bold">LigoWave Technology</p>
               <p>Junior Front end Developer</p>
             </div>
-            <p class="about">At LigoWave I work with Vue.js and I make GUIs for various routers.</p>
-            <p class="about">Technologies I have experience working with:</p>
+            <p class="about">Technologies I gained experience working with:</p>
             <div class="experience">
               <span class="item">
                 <div class="round">
@@ -247,6 +247,46 @@
                   <img src="./assets/mirage.png" alt="">
                 </div>
                 <p>Mirage JS</p>
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="date">2021.11 - 2022.03</div>
+            <div class="info">
+              <p class="semi-bold">EIS Group</p>
+              <p>Junior Developer</p>
+            </div>
+            <p class="about">Technologies I gained experience working with:</p>
+            <div class="experience">
+              <span class="item">
+                <div class="round">
+                  <img src="./assets/React-icon.svg.png" alt="">
+                </div>
+                <p>React</p>
+              </span>
+              <span class="item">
+                <div class="round">
+                  <img src="./assets/Typescript_logo_2020.svg" alt="">
+                </div>
+                <p>TypeScript</p>
+              </span>
+              <span class="item">
+                <div class="round">
+                  <img src="./assets/spring.png" alt="">
+                </div>
+                <p>Spring</p>
+              </span>
+              <span class="item">
+                <div class="round">
+                  <img src="./assets/docker.png" alt="">
+                </div>
+                <p>Docker</p>
+              </span>
+              <span class="item">
+                <div class="round">
+                  <img src="./assets/jira.png" alt="">
+                </div>
+                <p>Jira</p>
               </span>
             </div>
           </li>
