--- a/public/index.html
+++ b/public/index.html
@@ -182,9 +182,8 @@
         <div class="title">
           <p class="bold">About me</p>
         </div>
-        <p>I'm a Junior Front End Developer who also has experience working with Node.js and Spring for the backend. 
-          My favourite Front End Framework is Vue.js and I worked with it at LigoWave Technology. I also worked with React, Typescript and Spring at EIS Group.<br>
-          P.S. This resume is made with HTML and CSS, you can see the code on my <a target="_blank" href="https://github.com/RytisRazmus">GitHub</a>.
+        <p>I'm a Front-End developer mainly working with React and Vue.js. I enjoy generating insights in problem solving. Furthermore, I consider myself as a proficient in learning new skills and to utilize them in an effective manner.<br>
+          P.S. This resume is made with HTML and CSS, you can see the code on my <a target="_blank" href="https://github.com/RytisRazmus/Resume2021">GitHub</a>.
         </p>
       </div>
       <div class="resume_item resume_work">
@@ -198,7 +197,8 @@
               <p class="semi-bold">LigoWave Technology</p>
               <p>Junior Front end Developer</p>
             </div>
-            <p class="about">Technologies I gained experience working with:</p>
+            <p class="about">At Ligowave Technology I worked as a Front-End developer and I used Vue.js framework. I programmed UIs for different types of routers, repeaters and I used Figma prototypes created by the company’s designer as a reference. I had to create a Vue application which builds different UIs for different devices based on an application launch command. I also had to implement an ability to run the app in a mocked mode and to do that I used Mirage JS library to create a mocked server which served JSON files. The application also had light and dark modes and an ability to change the language of the web page. I also built all the components used throughout the web page by myself, including dropdowns, modals, etc. (except the charts which displayed device’s statistics. I used ApexCharts library for that). Other than the Front-Ends for routers and repeaters, I worked a bit with Express.js and MySQL to rewrite the Back-End of the company’s web page which was used by company’s employees to mark the absence days from work.</p>
+            <p class="bottom-1">I gained experience working with these technologies:</p>
             <div class="experience">
               <span class="item">
                 <div class="round">
@@ -250,13 +250,24 @@
               </span>
             </div>
           </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="resume">
+    <div class="resume_left">
+    </div>
+    <div class="resume_right">
+      <div class="resume_item resume_work">
+        <ul class="">
           <li>
             <div class="date">2021.11 - 2022.03</div>
             <div class="info">
               <p class="semi-bold">EIS Group</p>
-              <p>Junior Developer</p>
+              <p>Junior Fullstack Developer</p>
             </div>
-            <p class="about">Technologies I gained experience working with:</p>
+            <p class="about">At EIS Lithuania I worked as a Full-Stack developer. My team used agile practices and Jira for project management. There I gained experience working with Java Spring framework and I used Docker to deploy containers developed by my and other teams. For the Front-End part I have worked with React library and TypeScript. The work I did mainly consisted of bug fixing and sometimes implementing new UI features.</p>
+            <p class="bottom-1">I gained experience working with these technologies:</p>
             <div class="experience">
               <span class="item">
                 <div class="round">
