added redux to xp

--- a/public/index.html
+++ b/public/index.html
@@ -283,6 +283,12 @@
               </span>
               <span class="item">
                 <div class="round">
+                  <img src="./assets/redux.png" alt="">
+                </div>
+                <p>Redux</p>
+              </span>
+              <span class="item">
+                <div class="round">
                   <img src="./assets/spring.png" alt="">
                 </div>
                 <p>Spring</p>
