--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <div class="resume_item resume_info">
           <div class="title">
             <p class="bold">rytis razmus</p>
-            <p class="regular">Junior Front end Developer</p>
+            <p class="regular">Front end Developer</p>
           </div>
           <ul>
             <li>
@@ -47,9 +47,9 @@
               <div class="icon">
                 <i class="fas fa-envelope"></i>
               </div>
-              <div class="data">
+              <a href="mailto:rytis.razmus@gmail.com" class="data">
                 rytis.razmus@gmail.com
-              </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -81,27 +81,27 @@
                 JS
               </div>
               <div class="skill_progress">
-                <span style="width: 90%;"></span>
+                <span style="width: 95%;"></span>
               </div>
-              <div class="skill_per">90%</div>
+              <div class="skill_per">95%</div>
             </li>
             <li>
               <div class="skill_name">
                 TS
               </div>
               <div class="skill_progress">
-                <span style="width: 85%;"></span>
+                <span style="width: 90%;"></span>
               </div>
-              <div class="skill_per">85%</div>
+              <div class="skill_per">90%</div>
             </li>
             <li>
               <div class="skill_name">
                 Vue.js
               </div>
               <div class="skill_progress">
-                <span style="width: 85%;"></span>
+                <span style="width: 80%;"></span>
               </div>
-              <div class="skill_per">85%</div>
+              <div class="skill_per">80%</div>
             </li>
             <li>
               <div class="skill_name">
@@ -117,9 +117,9 @@
                 React
               </div>
               <div class="skill_progress">
-                <span style="width: 65%;"></span>
+                <span style="width: 90%;"></span>
               </div>
-              <div class="skill_per">65%</div>
+              <div class="skill_per">90%</div>
             </li>
             <li>
               <div class="skill_name">
@@ -182,8 +182,9 @@
         <div class="title">
           <p class="bold">About me</p>
         </div>
-        <p>I'm a Front-End developer mainly working with React and Vue.js. I enjoy generating insights in problem solving. Furthermore, I consider myself as a proficient in learning new skills and to utilize them in an effective manner.<br>
-          P.S. This resume is made with HTML and CSS, you can see the code on my <a target="_blank" href="https://github.com/RytisRazmus/Resume2021">GitHub</a>.
+        <p>I'm a Front-End developer mainly working with React and Vue.js. I enjoy generating insights in problem
+          solving. I am proficient at writing custom styles using CSS/SCSS/LESS (this resume is made with HTML and CSS <a target="_blank"
+          href="https://github.com/RytisRazmus/Resume2021">GitHub</a>.) and writing optimised/readable code using TypeScript.<br>
         </p>
       </div>
       <div class="resume_item resume_work">
@@ -197,7 +198,17 @@
               <p class="semi-bold">LigoWave Technology</p>
               <p>Junior Front end Developer</p>
             </div>
-            <p class="about">At Ligowave Technology I worked as a Front-End developer and I used the Vue.js framework. I programmed UIs for different types of routers, repeaters and I used Figma prototypes created by the company’s designer as a reference. I had to create a Vue application which builds different UIs for different devices based on an application launch command. I also had to implement an ability to run the app in a mocked mode and to do that I used Mirage JS library to create a mocked server which served static JSON files. The application also had light and dark modes and an ability to change the language of the web page. I also built all the components used throughout the web page by myself, including dropdowns, modals, etc. (except the charts which displayed device’s statistics. I used ApexCharts library for that). Other than the Front-Ends for routers and repeaters, I worked a bit with Express.js and MySQL to rewrite the Back-End of the company’s web page which was used by company’s employees to mark the absence days from work.</p>
+            <p class="about">At Ligowave Technology I worked as a Front-End developer and I used the Vue.js framework. I
+              programmed UIs for different types of routers, repeaters and I used Figma prototypes created by the
+              company’s designer as a reference. I had to create a Vue application which builds different UIs for
+              different devices based on an application launch command. I also had to implement an ability to run the
+              app in a mocked mode and to do that I used Mirage JS library to create a mocked server which served static
+              JSON files. The application also had light and dark modes and an ability to change the language of the web
+              page. I also built almost all the components used throughout the web page by myself, including dropdowns, modals,
+              etc. Other
+              than the Front-Ends for routers and repeaters, I worked a bit with Express.js and MySQL to rewrite the
+              Back-End of the company’s web page which was used by company’s employees to mark the absence days from
+              work.</p>
             <p class="bottom-1">I gained experience working with these technologies:</p>
             <div class="experience">
               <span class="item">
@@ -261,12 +272,17 @@
       <div class="resume_item resume_work">
         <ul class="">
           <li>
-            <div class="date">2021.11 - 2022.03</div>
+            <div class="date">2022 - Now</div>
             <div class="info">
-              <p class="semi-bold">EIS Group</p>
-              <p>Junior Fullstack Developer</p>
+              <p class="semi-bold">twoday</p>
+              <p>Front-End Developer</p>
             </div>
-            <p class="about">At EIS Lithuania I worked as a Full-Stack developer. My team used agile practices and Jira for project management. There I gained experience working with Java Spring framework and I used Docker to deploy containers developed by my and other teams. For the Front-End part I have worked with React library and TypeScript. The work I did mainly consisted of bug fixing and sometimes implementing new UI features.</p>
+            <p class="about">At twoday I'm working for a Danish digital signature company called - Addo. We are
+              rewriting old angular.js code to react and constantly implementing new features to the app. Working there
+              I've learned a lot about react and agile development. I work with two other Front-End developers,
+              Back-Enders and testers, do code reviews for the Front-Enders and I am managed by a senior developer from
+              another team who reviews my code from time to time and gives advice.
+            </p>
             <p class="bottom-1">I gained experience working with these technologies:</p>
             <div class="experience">
               <span class="item">
@@ -285,25 +301,37 @@
                 <div class="round">
                   <img src="./assets/redux.png" alt="">
                 </div>
-                <p>Redux</p>
+                <p>Redux toolkit</p>
               </span>
               <span class="item">
                 <div class="round">
-                  <img src="./assets/spring.png" alt="">
+                  <img src="./assets/rtl.png" alt="">
                 </div>
-                <p>Spring</p>
+                <p>React testing library</p>
               </span>
               <span class="item">
                 <div class="round">
-                  <img src="./assets/docker.png" alt="">
+                  <img src="./assets/lesscss.png" alt="">
                 </div>
-                <p>Docker</p>
+                <p>Less</p>
               </span>
               <span class="item">
                 <div class="round">
                   <img src="./assets/jira.png" alt="">
                 </div>
                 <p>Jira</p>
+              </span>
+              <span class="item">
+                <div class="round">
+                  <img src="./assets/i18nReact.png" alt="">
+                </div>
+                <p>React-18next</p>
+              </span>
+              <span class="item">
+                <div class="round">
+                  <img src="./assets/angularjs.jpeg" alt="">
+                </div>
+                <p>angular.js</p>
               </span>
             </div>
           </li>
